--- a/platformio.ini
+++ b/platformio.ini
@@ -10,10 +10,12 @@
 
 [env:esp32-c3-devkitm-1]
 platform = espressif32
-board = esp32-c3-devkitm-1
+board = esp32-c3-m1i-kit
 framework = arduino
 monitor_speed = 115200
-board_build.flash_mode = dio
-upload_port = /dev/cu.wchusbserial14340
+; board_build.flash_mode = dio
+board_build.filesystem = littlefs
+upload_port = COM3
 lib_deps = 
 	adafruit/Adafruit AHTX0@^2.0.5
+	bblanchon/ArduinoJson@^6.21.3
