--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ framework = arduino
 monitor_speed = 115200
 ; board_build.flash_mode = dio
 board_build.filesystem = littlefs
-upload_port = COM3
+upload_port = /dev/cu.wchusbserial14330
 lib_deps = 
 	adafruit/Adafruit AHTX0@^2.0.5
 	bblanchon/ArduinoJson@^6.21.3
